overflow x resolved for body

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,6 +20,7 @@
 body {
   min-height: 100vh;
   background: hsl(0, 0%, 90%);
+  overflow-x: hidden;
 }
 
 
